--- a/settings.json
+++ b/settings.json
@@ -23,13 +23,33 @@
             // Put settings here that you want to apply to all profiles.
             "fontFace": "Cascadia Code PL",
             "startingDirectory": "C:\\Dev",
-            "useAcrylic": true,
-            "acrylicOpacity": 0.8,
             "colorScheme": "Chester"
         },
         "list": [
             {
-                // Make changes here to the powershell.exe profile.
+                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+                "hidden": false,
+                "name": "PowerShell",
+                "source": "Windows.Terminal.PowershellCore",
+                "useAcrylic": true,
+                "acrylicOpacity": 0.5,
+                "backgroundImage": "%LOCALAPPDATA%/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/Backgrounds/Clippy.gif",
+                "backgroundImageStretchMode": "none",
+                "backgroundImageAlignment": "bottomRight"
+            },
+            {
+                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402337}",
+                "hidden": false,
+                "name": "UnicornShell",
+                "commandline": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
+                "backgroundImage": "%LOCALAPPDATA%/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/Backgrounds/Unicorn.gif",
+                "backgroundImageOpacity": 1,
+                "backgroundImageStretchMode": "uniformToFill",
+                "background": "#ffffff",
+                "foreground": "#000000"
+            },
+            {
+                // Make changes here to the powershdockerell.exe profile.
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "name": "Windows PowerShell",
                 "commandline": "powershell.exe",
@@ -41,12 +61,6 @@
                 "name": "Command Prompt",
                 "commandline": "cmd.exe",
                 "hidden": false
-            },
-            {
-                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-                "hidden": false,
-                "name": "PowerShell",
-                "source": "Windows.Terminal.PowershellCore"
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
